[fp_aggregation] testing data

--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
@@ -18,6 +18,8 @@
     "from paulssonlab.projects.molecule_counting.segmentation import segment, invert\n",
     "from paulssonlab.projects.molecule_counting.matriarch_stub import permute_labels\n",
     "import itertools\n",
+    "import os.path\n",
+    "from os import path\n",
     "\n",
     "# import cv2\n",
     "from matplotlib.offsetbox import TextArea, DrawingArea, OffsetImage, AnnotationBbox\n",
@@ -79,10 +81,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = filenames[14]\n",
+    "file = filenames[15]\n",
     "print(\"file\", file)\n",
     "nd2 = nd2reader.ND2Reader(file)\n",
-    "fov_index = 20\n",
+    "fov_index = 0\n",
     "phase_img = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
     "fluor_img = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
     "# phase_img = nd2.get_frame_2D(v=0, c=0, z=0)[1100:3000,500:2250]\n",
@@ -287,7 +289,7 @@
     "        #         correlation function is to be calculated. For now, we set it to the\n",
     "        #         maximum fluorescence intensity point of the cell.\n",
     "        if ref_point_val == \"max\":\n",
-    "            ref_point = np.where(cell == np.amax(cell))\n",
+    "            ref_point = np.ma.where(cell == np.amax(cell))\n",
     "            #         If there is more than one maximum fluorescence point, take the first one of these.\n",
     "            if len(ref_point[0]) > 1:\n",
     "                ref_point = (np.array([ref_point[0][0]]), np.array([ref_point[1][0]]))\n",
@@ -299,8 +301,17 @@
     "                points_in_cell[0][:: ref_point_val[1]],\n",
     "                points_in_cell[1][:: ref_point_val[1]],\n",
     "            )\n",
-    "        #         elif ref_point_val[0] == 'max': ref_point_val=['max',10] to take mean of 10 most intense pixels\n",
-    "\n",
+    "        elif (\n",
+    "            ref_point_val[0] == \"max\"\n",
+    "        ):  # ref_point_val=['max',10] to take mean of 10 most intense pixels\n",
+    "            cell_for_maxs = np.ma.copy(cell)\n",
+    "            ref_point = [[], []]\n",
+    "            for i in range(ref_point_val[1]):\n",
+    "                current_max = np.ma.where(cell_for_maxs == np.amax(cell_for_maxs))\n",
+    "                cell_for_maxs.mask[current_max] = 1\n",
+    "                ref_point[0].append(current_max[0][0])\n",
+    "                ref_point[1].append(current_max[1][0])\n",
+    "            ref_point = np.array(ref_point)\n",
     "        else:\n",
     "            ref_point = ref_point_val\n",
     "        r_values, gr_values = rdf_multi_ref_point_single_cell(\n",
@@ -341,6 +352,10 @@
     "#                                    intensity_weighted=True,\n",
     "#                                    savetxt='20200626/sfGFP_100x_fov20/refmax_dr1_intweighttrue')\n",
     "\n",
+    "# r,gr=rdf(seg,fluor_img,cell_indices='all',ref_point_val=['max',2],dr=1,\n",
+    "#                                    intensity_weighted=True,\n",
+    "#                                    savetxt='20200626/sfGFP_100x_fov20/refmax_dr1_intweighttrue')\n",
+    "\n",
     "# print(r_values_list)\n",
     "# print(gr_values_list)"
    ]
@@ -351,22 +366,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_cell_rdfs_from_txt(filename, start_r):\n",
+    "def get_funcvals_from_txt(filename, start_r):\n",
     "    # start_r is the start value of r in that dataset, so we can identify where each cell dataset starts.\n",
     "    values = np.genfromtxt(filename)\n",
     "    all_r_values = values[:, 0]\n",
-    "    all_gr_values = values[:, 1]\n",
+    "    all_func_values = values[:, 1]\n",
     "    start_indices = np.where(all_r_values == start_r)[0]\n",
     "    r_values_list = []\n",
-    "    gr_values_list = []\n",
+    "    func_values_list = []\n",
     "    for i, val in enumerate(start_indices):\n",
     "        if i != len(start_indices) - 1:\n",
     "            r_values_list.append(all_r_values[val : start_indices[i + 1]])\n",
-    "            gr_values_list.append(all_gr_values[val : start_indices[i + 1]])\n",
+    "            func_values_list.append(all_func_values[val : start_indices[i + 1]])\n",
     "        else:\n",
     "            r_values_list.append(all_r_values[val:])\n",
-    "            gr_values_list.append(all_gr_values[val:])\n",
-    "    return r_values_list, gr_values_list"
+    "            func_values_list.append(all_func_values[val:])\n",
+    "    return r_values_list, func_values_list"
    ]
   },
   {
@@ -386,7 +401,7 @@
     "    title=None,\n",
     "    line=[1],\n",
     "):\n",
-    "    r_values_list, gr_values_list = get_cell_rdfs_from_txt(filename, start_r)\n",
+    "    r_values_list, gr_values_list = get_funcvals_from_txt(filename, start_r)\n",
     "    if not ax:\n",
     "        fig, ax = plt.subplots()\n",
     "    if not indices_to_plot:\n",
@@ -482,16 +497,192 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradients(r_vals, func_vals, savetxt = 'gradients'):\n",
-    "# r_vals is a list of lists of r_values, and func_vals is a list of lists of function values\n",
-    "    all_gradient_vals = []\n",
-    "    for i,r_val_list in enumerate(r_vals):\n",
-    "        gradient_vals = np.gradient(func_vals[i], r_val_list)\n",
-    "        all_gradient_vals.append(gradient_vals)\n",
-    "    if savetxt:\n",
-    "        \n",
-    "    return all_gradient_vals"
+    "# Initial gradient of rdf or autocorr might not be that good - if we have a random high intensity point,\n",
+    "# it will very quickly drop since it's not a real blob, so this would increase the gradient artificially.\n",
+    "# Instead, calculate area under curve before autocorr = 0 or rdf = 1.\n",
+    "\n",
+    "# def gradients(r_vals, func_vals, savetxt = 'gradients'):\n",
+    "# # r_vals is a list of lists of r_values, and func_vals is a list of lists of function values\n",
+    "#     all_gradient_vals = []\n",
+    "#     for i,r_val_list in enumerate(r_vals):\n",
+    "#         gradient_vals = np.gradient(func_vals[i], r_val_list)\n",
+    "#         all_gradient_vals.append(gradient_vals)\n",
+    "#     if savetxt:\n",
+    "\n",
+    "#     return all_gradient_vals"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def area_under(r_vals, func_vals, threshold, as_frac_total=False):\n",
+    "    i = 0\n",
+    "    while i < len(func_vals) and func_vals[i] > threshold:\n",
+    "        i += 1\n",
+    "    r_vals_thresh, func_vals_thresh = r_vals[:i], func_vals[:i]\n",
+    "    area = np.trapz(func_vals_thresh, x=r_vals_thresh)\n",
+    "    if as_frac_total:\n",
+    "        total_int = np.trapz(func_vals, x=r_vals)\n",
+    "        area /= total_int\n",
+    "    return area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def area_under_from_file(filename, start_r, threshold, as_frac_total=False):\n",
+    "    r_values_list, func_values_list = get_funcvals_from_txt(filename, start_r)\n",
+    "    area_under_list = []\n",
+    "    for i in range(len(r_values_list)):\n",
+    "        area_under_list.append(\n",
+    "            area_under(\n",
+    "                r_values_list[i],\n",
+    "                func_values_list[i],\n",
+    "                threshold,\n",
+    "                as_frac_total=as_frac_total,\n",
+    "            )\n",
+    "        )\n",
+    "    return area_under_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def expected_func_val(r_vals, func_vals):\n",
+    "    inside = np.multiply(r_vals, func_vals)\n",
+    "    expected_val = np.trapz(inside, x=r_vals)\n",
+    "    norm_factor = np.trapz(func_vals, x=r_vals)\n",
+    "    expected_val /= norm_factor\n",
+    "    return expected_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def expected_func_val_from_file(filename, start_r):\n",
+    "    r_values_list, func_values_list = get_funcvals_from_txt(filename, start_r)\n",
+    "    expected_val_list = []\n",
+    "    for i in range(len(r_values_list)):\n",
+    "        expected_val_list.append(\n",
+    "            expected_func_val(r_values_list[i], func_values_list[i])\n",
+    "        )\n",
+    "    return expected_val_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_norm_func_from_file(filename, start_r, savetxt=None):\n",
+    "    r_values_list, func_values_list = get_funcvals_from_txt(filename, start_r)\n",
+    "    norm_func_values_list = []\n",
+    "    for i, r_vals in enumerate(r_values_list):\n",
+    "        norm_factor = np.trapz(func_values_list[i], x=r_vals)\n",
+    "        norm_func_values_list.append(func_values_list[i] / norm_factor)\n",
+    "    if savetxt:\n",
+    "        all_r_to_save = np.concatenate(r_values_list).ravel()\n",
+    "        all_norm_func_to_save = np.concatenate(norm_func_values_list).ravel()\n",
+    "        np.savetxt(\n",
+    "            savetxt, np.transpose(np.array([all_r_to_save, all_norm_func_to_save]))\n",
+    "        )\n",
+    "    return r_values_list, norm_func_values_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# files_to_analyse = [[14,\"chr_P_sfGFP_100x_ref5max\",20],[3,\"chr_P_GFPmut3_100x_ref5max\",50]]\n",
+    "files_to_analyse = [\n",
+    "    [16, \"chr_P_sfGFP_40x_ref1max\", 10],\n",
+    "    [6, \"chr_P_GFPmut3_40x_ref1max\", 0],\n",
+    "]\n",
+    "# files_to_analyse = [[15,\"chr_P_sfGFP_20x_ref1max\",0],[4,\"chr_P_GFPmut3_20x_ref1max\",0]]\n",
+    "for file in files_to_analyse:\n",
+    "    nd2 = nd2reader.ND2Reader(filenames[file[0]])\n",
+    "    fov_index = file[-1]\n",
+    "    name = file[1]\n",
+    "    if not path.exists(\"20200724/autocorr_\" + name):\n",
+    "        print(\"calculating\")\n",
+    "        phase_img = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
+    "        fluor_img = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
+    "        seg = segment_phase(phase_img)\n",
+    "        autocorr(\n",
+    "            seg,\n",
+    "            fluor_img,\n",
+    "            cell_indices=np.arange(300),\n",
+    "            time_allowed=80,\n",
+    "            savetxt=\"20200724/autocorr_\" + name,\n",
+    "            ref_point_val=[\"max\", 1],\n",
+    "            r_values=None,\n",
+    "            gr_values=None,\n",
+    "            intensity_weighted=True,\n",
+    "            start_r=1,\n",
+    "            dr=1,\n",
+    "            rdfsavetxt=\"20200724/rdf_\" + name,\n",
+    "        )\n",
+    "\n",
+    "    fig, axes = plt.subplots(1, 4, figsize=(12, 3))\n",
+    "    ax = axes.ravel()\n",
+    "    plot_gr_from_file(\"20200724/rdf_\" + name, 1, savefig=None, line=[1], ax=ax[0])\n",
+    "    ax[0].set_title(\"RDF\")\n",
+    "\n",
+    "    area_under_rdf = area_under_from_file(\"20200724/rdf_\" + name, 1, 1)\n",
+    "    ax[1].hist(area_under_rdf, bins=20, range=(0, 40))\n",
+    "    ax[1].set_title(\"Integral RDF>1\")\n",
+    "\n",
+    "    area_under_rdf_frac = area_under_from_file(\n",
+    "        \"20200724/rdf_\" + name, 1, 1, as_frac_total=True\n",
+    "    )\n",
+    "    ax[2].hist(area_under_rdf_frac, bins=20, range=(0, 1))\n",
+    "    ax[2].set_title(\"Integral RDF>1 as frac\")\n",
+    "\n",
+    "    expected_rdfs = expected_func_val_from_file(\"20200724/rdf_\" + name, 1)\n",
+    "    ax[3].hist(expected_rdfs, bins=20, range=(0, 100))\n",
+    "    ax[3].set_title(\"Mean RDF\")\n",
+    "\n",
+    "    #     get_norm_func_from_file('20200724/rdf_'+name, 1, savetxt='20200724/normrdf_'+name)\n",
+    "\n",
+    "    #     plot_gr_from_file('20200724/normrdf_'+name,1,\n",
+    "    #                   savefig=None, line=None,\n",
+    "    #                  ax=ax[3])\n",
+    "    #     ax[3].set_title('Normalised RDF')\n",
+    "\n",
+    "    #     area_under_normrdf = area_under_from_file('20200724/normrdf_'+name, 1, 0)\n",
+    "    #     ax[4].hist(area_under_normrdf,bins=20,range=(0,100))\n",
+    "    #     ax[4].set_title('Integral norm RDF>1')\n",
+    "\n",
+    "    #     expected_normrdfs = expected_func_val_from_file('20200724/normrdf_'+name, 1)\n",
+    "    #     ax[5].hist(expected_normrdfs,bins=20,range=(0,100))\n",
+    "    #     ax[5].set_title('Mean normalised RDF')\n",
+    "\n",
+    "    fig.suptitle(name + \" fov: \" + str(fov_index), fontsize=14, y=1.05)\n",
+    "    plt.tight_layout()\n",
+    "    fig.savefig(\"20200724/plots_\" + name, bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -550,17 +741,6 @@
     "plt.tight_layout()\n",
     "fig.savefig(\"20200714/gr_as_Y/plots_\" + name, y=1)\n",
     "np.savetxt(\"cellmask\", seg[700:850, 425:575])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_gradients_from_file(filename, start_r, savefig):\n",
-    "    \n",
-    "    "
    ]
   },
   {
