[cloning,shenker/cloning] assemble_golden_gate works.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/200725 LIB parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200725 LIB parts ingest.ipynb
@@ -426,14 +426,12 @@
     "        type=part_type,\n",
     "    )\n",
     "    label.qualifiers[\"label\"] = [part_name]\n",
-    "    part.features = [label, *part.features]\n",
+    "    features = [feature for feature in part.features if feature.type != \"source\"]\n",
+    "    part.features = [label, *features]\n",
     "    # print(part.features)\n",
+    "    # TODO: filter out source annotation\n",
     "    seqs_to_assemble.append((part, overhang1, overhang2))\n",
-    "sequence.assemble_sequences(seqs_to_assemble, linear=False)\n",
-    "\n",
-    "# print(digest_for_assembly(seq1, Restriction.BsaI, linear=False))\n",
-    "# 35/AGTA/CTCC\n",
-    "# digest_for_assembly(seq1.reverse_complement(), Restriction.BsaI, linear=False)"
+    "assembly = sequence.assemble_golden_gate(seqs_to_assemble, linear=False)"
    ]
   },
   {
@@ -442,7 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq1.features"
+    "assembly.name = \"test2\""
    ]
   },
   {
@@ -451,7 +449,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq1.features[5].qualifiers"
+    "assembly.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/Users/jacob/Downloads/test2.gb\", \"w\") as f:\n",
+    "    f.write(assembly.format(\"gb\"))"
    ]
   },
   {
