[fp_aggregation] added more metrics to test

--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
@@ -20,6 +20,7 @@
     "import itertools\n",
     "import os.path\n",
     "from os import path\n",
+    "from itertools import combinations\n",
     "\n",
     "# import cv2\n",
     "from matplotlib.offsetbox import TextArea, DrawingArea, OffsetImage, AnnotationBbox\n",
@@ -518,14 +519,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def area_under(r_vals, func_vals, threshold, as_frac_total=False):\n",
+    "def area_under(\n",
+    "    r_vals,\n",
+    "    func_vals,\n",
+    "    threshold,\n",
+    "    as_frac_total=False,\n",
+    "    shift=None,\n",
+    "    below_thresh_zero=False,\n",
+    "    as_frac_total_original=False,\n",
+    "):\n",
+    "    func_vals_original = np.copy(func_vals)\n",
+    "    if shift:\n",
+    "        func_vals -= shift\n",
     "    i = 0\n",
     "    while i < len(func_vals) and func_vals[i] > threshold:\n",
     "        i += 1\n",
     "    r_vals_thresh, func_vals_thresh = r_vals[:i], func_vals[:i]\n",
     "    area = np.trapz(func_vals_thresh, x=r_vals_thresh)\n",
+    "    if below_thresh_zero:\n",
+    "        for i, val in enumerate(func_vals):\n",
+    "            if val < threshold:\n",
+    "                func_vals[i] = 0\n",
     "    if as_frac_total:\n",
-    "        total_int = np.trapz(func_vals, x=r_vals)\n",
+    "        if as_frac_total_original:\n",
+    "            total_int = np.trapz(func_vals_original, x=r_vals)\n",
+    "        else:\n",
+    "            total_int = np.trapz(func_vals, x=r_vals)\n",
     "        area /= total_int\n",
     "    return area"
    ]
@@ -536,7 +555,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def area_under_from_file(filename, start_r, threshold, as_frac_total=False):\n",
+    "def area_under_from_file(\n",
+    "    filename,\n",
+    "    start_r,\n",
+    "    threshold,\n",
+    "    as_frac_total=False,\n",
+    "    shift=None,\n",
+    "    below_thresh_zero=False,\n",
+    "    as_frac_total_original=False,\n",
+    "):\n",
     "    r_values_list, func_values_list = get_funcvals_from_txt(filename, start_r)\n",
     "    area_under_list = []\n",
     "    for i in range(len(r_values_list)):\n",
@@ -546,9 +573,91 @@
     "                func_values_list[i],\n",
     "                threshold,\n",
     "                as_frac_total=as_frac_total,\n",
+    "                shift=shift,\n",
+    "                below_thresh_zero=below_thresh_zero,\n",
+    "                as_frac_total_original=as_frac_total_original,\n",
     "            )\n",
     "        )\n",
     "    return area_under_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def first_threshold_cross(r_vals, func_vals, threshold, shift=None):\n",
+    "    if shift:\n",
+    "        func_vals -= shift\n",
+    "    i = 0\n",
+    "    while i < len(func_vals) and func_vals[i] > threshold:\n",
+    "        i += 1\n",
+    "    return r_vals[i - 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def first_threshold_cross_from_file(filename, start_r, threshold, shift=None):\n",
+    "    r_values_list, func_values_list = get_funcvals_from_txt(filename, start_r)\n",
+    "    results_list = []\n",
+    "    for i in range(len(r_values_list)):\n",
+    "        results_list.append(\n",
+    "            first_threshold_cross(\n",
+    "                r_values_list[i], func_values_list[i], threshold, shift=shift\n",
+    "            )\n",
+    "        )\n",
+    "    return results_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def number_threshold_crosses(\n",
+    "    r_vals, func_vals, threshold, shift=None, rel_to_length=False\n",
+    "):\n",
+    "    if shift:\n",
+    "        func_vals -= shift\n",
+    "    crosses_count = 0\n",
+    "    for i in range(len(r_vals) - 1):\n",
+    "        if func_vals[i] <= threshold and func_vals[i + 1] > threshold:\n",
+    "            crosses_count += 1\n",
+    "        elif func_vals[i] > threshold and func_vals[i + 1] <= threshold:\n",
+    "            crosses_count += 1\n",
+    "    if rel_to_length:\n",
+    "        crosses_count /= len(r_vals)\n",
+    "    return crosses_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def number_threshold_crosses_from_file(\n",
+    "    filename, start_r, threshold, shift=None, rel_to_length=False\n",
+    "):\n",
+    "    r_values_list, func_values_list = get_funcvals_from_txt(filename, start_r)\n",
+    "    results_list = []\n",
+    "    for i in range(len(r_values_list)):\n",
+    "        results_list.append(\n",
+    "            number_threshold_crosses(\n",
+    "                r_values_list[i],\n",
+    "                func_values_list[i],\n",
+    "                threshold,\n",
+    "                shift=shift,\n",
+    "                rel_to_length=rel_to_length,\n",
+    "            )\n",
+    "        )\n",
+    "    return results_list"
    ]
   },
   {
@@ -608,73 +717,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# files_to_analyse = [[14,\"chr_P_sfGFP_100x_ref5max\",20],[3,\"chr_P_GFPmut3_100x_ref5max\",50]]\n",
-    "files_to_analyse = [\n",
-    "    [16, \"chr_P_sfGFP_40x_ref1max\", 10],\n",
-    "    [6, \"chr_P_GFPmut3_40x_ref1max\", 0],\n",
-    "]\n",
-    "# files_to_analyse = [[15,\"chr_P_sfGFP_20x_ref1max\",0],[4,\"chr_P_GFPmut3_20x_ref1max\",0]]\n",
-    "for file in files_to_analyse:\n",
-    "    nd2 = nd2reader.ND2Reader(filenames[file[0]])\n",
-    "    fov_index = file[-1]\n",
-    "    name = file[1]\n",
-    "    if not path.exists(\"20200724/autocorr_\" + name):\n",
-    "        print(\"calculating\")\n",
-    "        phase_img = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
-    "        fluor_img = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
-    "        seg = segment_phase(phase_img)\n",
-    "        autocorr(\n",
-    "            seg,\n",
-    "            fluor_img,\n",
-    "            cell_indices=np.arange(300),\n",
-    "            time_allowed=80,\n",
-    "            savetxt=\"20200724/autocorr_\" + name,\n",
-    "            ref_point_val=[\"max\", 1],\n",
-    "            r_values=None,\n",
-    "            gr_values=None,\n",
-    "            intensity_weighted=True,\n",
-    "            start_r=1,\n",
-    "            dr=1,\n",
-    "            rdfsavetxt=\"20200724/rdf_\" + name,\n",
-    "        )\n",
-    "\n",
-    "    fig, axes = plt.subplots(1, 4, figsize=(12, 3))\n",
-    "    ax = axes.ravel()\n",
-    "    plot_gr_from_file(\"20200724/rdf_\" + name, 1, savefig=None, line=[1], ax=ax[0])\n",
-    "    ax[0].set_title(\"RDF\")\n",
-    "\n",
-    "    area_under_rdf = area_under_from_file(\"20200724/rdf_\" + name, 1, 1)\n",
-    "    ax[1].hist(area_under_rdf, bins=20, range=(0, 40))\n",
-    "    ax[1].set_title(\"Integral RDF>1\")\n",
-    "\n",
-    "    area_under_rdf_frac = area_under_from_file(\n",
-    "        \"20200724/rdf_\" + name, 1, 1, as_frac_total=True\n",
-    "    )\n",
-    "    ax[2].hist(area_under_rdf_frac, bins=20, range=(0, 1))\n",
-    "    ax[2].set_title(\"Integral RDF>1 as frac\")\n",
-    "\n",
-    "    expected_rdfs = expected_func_val_from_file(\"20200724/rdf_\" + name, 1)\n",
-    "    ax[3].hist(expected_rdfs, bins=20, range=(0, 100))\n",
-    "    ax[3].set_title(\"Mean RDF\")\n",
-    "\n",
-    "    #     get_norm_func_from_file('20200724/rdf_'+name, 1, savetxt='20200724/normrdf_'+name)\n",
-    "\n",
-    "    #     plot_gr_from_file('20200724/normrdf_'+name,1,\n",
-    "    #                   savefig=None, line=None,\n",
-    "    #                  ax=ax[3])\n",
-    "    #     ax[3].set_title('Normalised RDF')\n",
-    "\n",
-    "    #     area_under_normrdf = area_under_from_file('20200724/normrdf_'+name, 1, 0)\n",
-    "    #     ax[4].hist(area_under_normrdf,bins=20,range=(0,100))\n",
-    "    #     ax[4].set_title('Integral norm RDF>1')\n",
-    "\n",
-    "    #     expected_normrdfs = expected_func_val_from_file('20200724/normrdf_'+name, 1)\n",
-    "    #     ax[5].hist(expected_normrdfs,bins=20,range=(0,100))\n",
-    "    #     ax[5].set_title('Mean normalised RDF')\n",
-    "\n",
-    "    fig.suptitle(name + \" fov: \" + str(fov_index), fontsize=14, y=1.05)\n",
-    "    plt.tight_layout()\n",
-    "    fig.savefig(\"20200724/plots_\" + name, bbox_inches=\"tight\")"
+    "def smooth_func_data_from_file(filename, start_r, smooth_window):\n",
+    "    r_values_list, func_values_list = get_funcvals_from_txt(filename,start_r)\n",
+    "    for i,r_vals in enumerate(r_values_list):\n",
+    "    \n",
+    "    \n",
+    "    def moving_average(a, n=3) :\n",
+    "    ret = np.cumsum(a, dtype=float)\n",
+    "    ret[n:] = ret[n:] - ret[:-n]\n",
+    "    return ret[n - 1:] / n"
    ]
   },
   {
@@ -682,7 +733,211 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# files_to_analyse = [[14,\"chr_P_sfGFP_100x_ref10max\",20],[3,\"chr_P_GFPmut3_100x_ref10max\",50]]\n",
+    "files_to_analyse = [\n",
+    "    [16, \"chr_P_sfGFP_40x_ref5max\", 10],\n",
+    "    [6, \"chr_P_GFPmut3_40x_ref5max\", 0],\n",
+    "]\n",
+    "# files_to_analyse = [[15,\"chr_P_sfGFP_20x_ref1max\",0],[4,\"chr_P_GFPmut3_20x_ref1max\",0]]\n",
+    "calculate = False\n",
+    "date_stamp_data = \"20200724\"\n",
+    "date_stamp_output = \"20200725\"\n",
+    "ref_points = 5\n",
+    "cell_indices = np.arange(200)\n",
+    "\n",
+    "\n",
+    "for file in files_to_analyse:\n",
+    "    nd2 = nd2reader.ND2Reader(filenames[file[0]])\n",
+    "    fov_index = file[-1]\n",
+    "    name = file[1]\n",
+    "    if not path.exists(date_stamp_data + \"/autocorr_\" + name) or calculate:\n",
+    "        print(\"Calculating\")\n",
+    "        phase_img = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
+    "        fluor_img = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
+    "        seg = segment_phase(phase_img)\n",
+    "        autocorr(\n",
+    "            seg,\n",
+    "            fluor_img,\n",
+    "            cell_indices=cell_indices,\n",
+    "            time_allowed=80,\n",
+    "            savetxt=date_stamp_output + \"/autocorr_\" + name,\n",
+    "            ref_point_val=[\"max\", ref_points],\n",
+    "            r_values=None,\n",
+    "            gr_values=None,\n",
+    "            intensity_weighted=True,\n",
+    "            start_r=1,\n",
+    "            dr=1,\n",
+    "            rdfsavetxt=date_stamp_output + \"/rdf_\" + name,\n",
+    "        )\n",
+    "\n",
+    "    fig, axes = plt.subplots(1, 4, figsize=(12, 3))\n",
+    "    ax = axes.ravel()\n",
+    "    plot_gr_from_file(\n",
+    "        date_stamp_data + \"/rdf_\" + name, 1, savefig=None, line=[1], ax=ax[0]\n",
+    "    )\n",
+    "    ax[0].set_title(\"RDF\")\n",
+    "\n",
+    "    area_under_rdf = area_under_from_file(date_stamp_data + \"/rdf_\" + name, 1, 1)\n",
+    "    ax[1].hist(area_under_rdf, bins=20, range=(0, 40))\n",
+    "    ax[1].set_title(\"Integral RDF>1\")\n",
+    "\n",
+    "    area_under_rdf_frac = area_under_from_file(\n",
+    "        date_stamp_data + \"/rdf_\" + name, 1, 1, as_frac_total=True\n",
+    "    )\n",
+    "    ax[2].hist(area_under_rdf_frac, bins=20, range=(0, 1))\n",
+    "    ax[2].set_title(\"Integral RDF>1 as frac\")\n",
+    "\n",
+    "    expected_rdfs = expected_func_val_from_file(date_stamp_data + \"/rdf_\" + name, 1)\n",
+    "    ax[3].hist(expected_rdfs, bins=20, range=(0, 40))\n",
+    "    ax[3].set_title(\"Mean RDF\")\n",
+    "\n",
+    "    fig.suptitle(name + \" fov: \" + str(fov_index), fontsize=14, y=1.05)\n",
+    "    plt.tight_layout()\n",
+    "    fig.savefig(date_stamp_output + \"/plots_\" + name, bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_analysis_plots(files_to_analyse):\n",
+    "    #     files_to_analyse is a list of lists.\n",
+    "    # Each list contains the information about the file, in the order:\n",
+    "    # [filename_index, base_filename, fov (rewrite in future to do multiple), date_stamp_data, date_stamp_output,\n",
+    "    # ref_points, cell_indices, calculate (true if want to re-calculate, otherwise will check for existing data files)]\n",
+    "    for file_details in files_to_analyse:\n",
+    "        [\n",
+    "            file_index,\n",
+    "            name,\n",
+    "            fov_index,\n",
+    "            date_stamp_data,\n",
+    "            date_stamp_output,\n",
+    "            ref_points,\n",
+    "            cell_indices,\n",
+    "            calculate,\n",
+    "        ] = file_details\n",
+    "        nd2 = nd2reader.ND2Reader(filenames[file_index])\n",
+    "        if not path.exists(date_stamp_data + \"/autocorr_\" + name) or calculate:\n",
+    "            print(\"Calculating\")\n",
+    "            phase_img = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
+    "            fluor_img = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
+    "            seg = segment_phase(phase_img)\n",
+    "            autocorr(\n",
+    "                seg,\n",
+    "                fluor_img,\n",
+    "                cell_indices=cell_indices,\n",
+    "                time_allowed=80,\n",
+    "                savetxt=date_stamp_output + \"/autocorr_\" + name,\n",
+    "                ref_point_val=[\"max\", ref_points],\n",
+    "                r_values=None,\n",
+    "                gr_values=None,\n",
+    "                intensity_weighted=True,\n",
+    "                start_r=1,\n",
+    "                dr=1,\n",
+    "                rdfsavetxt=date_stamp_output + \"/rdf_\" + name,\n",
+    "            )\n",
+    "        fig, axes = plt.subplots(3, 4, figsize=(12, 9))\n",
+    "        ax = axes.ravel()\n",
+    "        plot_gr_from_file(\n",
+    "            date_stamp_data + \"/rdf_\" + name, 1, savefig=None, line=[1], ax=ax[0]\n",
+    "        )\n",
+    "        ax[0].set_title(\"RDF\")\n",
+    "\n",
+    "        val_first_rdf_cross = first_threshold_cross_from_file(\n",
+    "            date_stamp_data + \"/rdf_\" + name, 1, 0, shift=1\n",
+    "        )\n",
+    "        area_under_rdf_shift1_thresh0 = area_under_from_file(\n",
+    "            date_stamp_data + \"/rdf_\" + name,\n",
+    "            1,\n",
+    "            0,\n",
+    "            shift=1,\n",
+    "            as_frac_total=False,\n",
+    "            below_thresh_zero=False,\n",
+    "        )\n",
+    "        area_under_rdf_shift1_thresh0_as_frac_total = area_under_from_file(\n",
+    "            date_stamp_data + \"/rdf_\" + name,\n",
+    "            1,\n",
+    "            0,\n",
+    "            shift=1,\n",
+    "            as_frac_total=True,\n",
+    "            below_thresh_zero=True,\n",
+    "            as_frac_total_original=True,\n",
+    "        )\n",
+    "        number_rdf_crosses = number_threshold_crosses_from_file(\n",
+    "            date_stamp_data + \"/rdf_\" + name, 1, 0, shift=1, rel_to_length=True\n",
+    "        )\n",
+    "\n",
+    "        to_plot = [\n",
+    "            [\"First RDF-1=0\", val_first_rdf_cross, 20],\n",
+    "            [\"Integral RDF-1>0\", area_under_rdf_shift1_thresh0, 25],\n",
+    "            [\n",
+    "                \"Integral RDF-1>0 as frac total\",\n",
+    "                area_under_rdf_shift1_thresh0_as_frac_total,\n",
+    "                1,\n",
+    "            ],\n",
+    "            [\"RDF-1 fluctuation frequency\", number_rdf_crosses, 1],\n",
+    "        ]\n",
+    "\n",
+    "        for i in np.arange(1, 5):\n",
+    "            ax[i].hist(to_plot[i - 1][1], bins=20, range=(0, to_plot[i - 1][2]))\n",
+    "            ax[i].set_title(to_plot[i - 1][0])\n",
+    "\n",
+    "        combs = combinations([0, 1, 2, 3], 2)\n",
+    "\n",
+    "        for i, comb in enumerate(combs):\n",
+    "            ax[i + 5].scatter(to_plot[comb[0]][1], to_plot[comb[1]][1])\n",
+    "            ax[i + 5].set_xlabel(to_plot[comb[0]][0])\n",
+    "            ax[i + 5].set_ylabel(to_plot[comb[1]][0])\n",
+    "            ax[i + 5].set_xlim(0, to_plot[comb[0]][2])\n",
+    "            ax[i + 5].set_ylim(0, to_plot[comb[1]][2])\n",
+    "\n",
+    "        fig.suptitle(name + \" fov: \" + str(fov_index), fontsize=14, y=1.05)\n",
+    "        plt.tight_layout()\n",
+    "        fig.savefig(date_stamp_output + \"/plots_\" + name, bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# files_to_analyse = [[14,\"chr_P_sfGFP_100x_ref1max\",20,'20200724','20200725',\n",
+    "#                     5,np.arange(200),False],\n",
+    "#                     [3,\"chr_P_GFPmut3_100x_ref1max\",50,'20200724','20200725',\n",
+    "#                     5,np.arange(200),False]]\n",
+    "# files_to_analyse = [[16,\"chr_P_sfGFP_40x_ref1max\",10,'20200724','20200725',\n",
+    "#                     5,np.arange(200),False],\n",
+    "#                     [6,\"chr_P_GFPmut3_40x_ref1max\",0,'20200724','20200725',\n",
+    "#                     5,np.arange(200),False]]\n",
+    "files_to_analyse = [\n",
+    "    [\n",
+    "        15,\n",
+    "        \"chr_P_sfGFP_20x_ref10max\",\n",
+    "        0,\n",
+    "        \"20200724\",\n",
+    "        \"20200725\",\n",
+    "        5,\n",
+    "        np.arange(200),\n",
+    "        False,\n",
+    "    ],\n",
+    "    [\n",
+    "        4,\n",
+    "        \"chr_P_GFPmut3_20x_ref10max\",\n",
+    "        0,\n",
+    "        \"20200724\",\n",
+    "        \"20200725\",\n",
+    "        5,\n",
+    "        np.arange(200),\n",
+    "        False,\n",
+    "    ],\n",
+    "]\n",
+    "\n",
+    "generate_analysis_plots(files_to_analyse)"
+   ]
   },
   {
    "cell_type": "code",
